Fix spacing on images

--- a/css/layout.css
+++ b/css/layout.css
@@ -4,10 +4,10 @@ main {
   grid-template-rows: repeat(5, 250px);
 }
 
-#total_products div {
+/* #total_products div {
   width: 300px;
   height: 250px;
-}
+} */
 
 #aside {
   grid-column: 1 / 2;
@@ -18,6 +18,7 @@ main {
   grid-column: 2 / 5;
   grid-row: 1 / 2;
   display: flex;
+  justify-content: center;
 }
 
 #welcome {
