--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ h3 {
 
 
 #total_products img {
-  width: 200px;
+  width: 270px;
   margin: 20px;
   display: block;
   border: 5px solid rgb(109, 156, 90);
